# aimage

./: .gitignore  ChangeLog  INSTALL  LICENSE  Makefile.am  README.md  aimage.spec.in  config.h.in  configure.ac
src/: Makefile.am  aimage.cpp  aimage.h  aimage_os.cpp  gui.cpp  gui.h  hash_t.h  ident.cpp  ident.h  imager.cpp  imager.h
